#18 Extended example code for hit method and change currentPlayer